fixed nav text color, added spacing between paragraphs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ body {
 /* Paragraphs & links */
 .main-content p {
   margin-top: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
   color: rgba(37,37,37,var(--body-opacity)); /*opacity-controlled body text */
 }
 
@@ -248,7 +248,7 @@ button.outline:hover {
   font-family: 'Trirong', serif; /* chosen default font */
   font-weight: 300; /* default font weight is 400 */
   font-size: 1rem;
-  color: rgba(37,37,37,0.75)); /* lighter default opacity, separate from body opacity */
+  color: rgba(37,37,37,0.75); /* lighter default opacity, separate from body opacity */
   transition: color 0.3s ease;
 }
 
